Make home page display on default User can login to create recipies but are not forced to login to view community

--- a/loans/templates/books.html
+++ b/loans/templates/books.html
@@ -9,6 +9,7 @@ My Library | Books
 
 {% block content %}
 <h1>Books</h1>
+{% include "__pagination_navbar.html" with page_object=page_object %}
 <table class="table table-hover">
     <thead>
         <tr>
@@ -18,10 +19,10 @@ My Library | Books
         </tr>
     </thead>
     <tbody>
-        {% for book in books %}
+        {% for book in page_object %}
             <tr>
                 <td>{{book.id}}</td>
-                <td>{{book.title}} {{book.authors}}, published: {{book.publication_date}}, {{book.isbn}}</td>
+                <td>{% include "__display_book.html" with book=book%}</td>
                 <td>
                     <a href={% url 'get_book' book.id%}><i class="bi bi-eye"></i></a> 
                     <a href={% url 'update_book' book.id%}><i class="bi bi-pencil"></i></a> 
@@ -31,4 +32,5 @@ My Library | Books
         {% endfor %}
     </tbody>
 </table>
+{% include "__pagination_navbar.html" with page_object=page_object %}
 {% endblock %}
