--- a/loans/templates/base_page.html
+++ b/loans/templates/base_page.html
@@ -17,17 +17,19 @@
 
     <body>
 
-        {% include "__navbar.html" %}
-
-        <div class="container">
-            <div class="row">
-                <div class="col"> 
-                    {% block content %}
-                    {% endblock %}
-                </div>   
+        {% block body %}
+            {% include "__navbar.html" %}
+            {% include "__messages.html" %}
+            <div class="container">
+                <div class="row">
+                    <div class="col"> 
+                        {% block content %}
+                        {% endblock %}
+                    </div>   
+                </div>
             </div>
-        </div>
-        
+
+        {% endblock %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     </body>
 </html>
