--- a/loans/templates/create_book.html
+++ b/loans/templates/create_book.html
@@ -8,7 +8,7 @@ My Library | Create Book
 
 <h1>Create a New Book</h1>
 
-<form action="{% url 'create_book' %}", method="post"> 
+<form action="{% url 'create_book' %}", method="post", enctype="multipart/form-data"> 
     {% include "__book_form.html" with form=form submit_btn_name="create"%}
 </form>
 
